# SpeakUp

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  build.sh  pyproject.toml
accounting/: README.md  calculate-costs.sh  labor-log.md
artifacts/: Decision-Log.md  SpeakUp_ideation_user_plus_summary.md  Workflow-Log.md
briefing/: Meeting-Agenda-2026-01-06.tex  SpeakUp-Briefing.md  SpeakUp-Briefing.tex  build.sh
docs/: environmental-friction.md
src/bpv7/: README.md  __init__.py  capture_demo.sh  example.py  test_local.py  test_pdf_transfer.py  test_pdf_transfer_tshark.py
src/bpv7/agent/: __init__.py  tcpcl.py
src/bpv7/blocks/: __init__.py  payload.py  primary.py
src/bpv7/core/: __init__.py  bundle.py  eid.py  time.py
src/bpv7/encoding/: __init__.py  cbor.py  crc.py
src/bpv7/simulation/: Dockerfile  EXPORT_CONTROL.md  README.md  docker-compose.yml  long_duration_test.py  (+1 more)
training/: CREDITS.md  ISSUES.md  README.md  Video-Storyboard.md  build.sh  generate-music.py  generate-video.sh  generate-visuals.sh  upload-youtube.sh
training/narration-scripts/: full-narration.txt  medium-narration.txt  short-narration.txt
training/video-output/: SpeakUp-short.srt
verification/: Compliance-Statement.md  File-Manifest.md  PII-Scan-Results.md  Requirements-Traceability.md  Security-Attestation.md  video-release-approval.md
verification/scripts/: check-document-qa.sh  check-host-security.sh  check-mac-addresses.sh  check-malware.sh  check-pii.sh  check-vulnerabilities.sh  generate-manifest.sh  run-all-scans.sh
verification/test-results/: README.md
(+30 files in other folders)
